# tree-sitter-newick

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  cliff.toml  devenv.nix  go.mod  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-newick.pc.in
bindings/c/tree_sitter/: tree-sitter-newick.h
bindings/go/: binding.go  binding_test.go
bindings/node/: index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_newick/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterNewickTests/: TreeSitterNewickTests.swift
src/: grammar.json  node-types.json  parser.c
