[package]
name = "tree-sitter-newick"
description = "A parser for (extended) Newick files (nh, nwk, nhx)"
version = "1.1.0"
authors = ["Franklin Delehelle <github@odena.eu>"]
license-file = "LICENSE.txt"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "newick"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/delehef/tree-sitter-newick"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.9"

[workspace.metadata.release]
publish = false
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
allow-branch = ["master"]
