[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-newick"
description = "A parser for (extended) Newick files (nh, nwk, nhx)"
version = "1.0.0"
keywords = ["incremental", "parsing", "tree-sitter", "newick"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Franklin Delehelle", email = "github@odena.eu" }]
requires-python = ">=3.10"
license.text = "CeCILL-C"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/delehef/tree-sitter-newick"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
